--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Matthew Fernandez",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^4.39.3"
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.7"
   }
 }
